- use /dev/urandom instead of /dev/random.
- check for mtab pointing to /proc/mounts.
- dynamically allocate interface config buffer.
- update kernel patches.
- fix fd leak at multi-mount non-fatal mount fail.
- fix incorrect multi-mount mountpoint calcualtion.
- fix map out of order map re-read on hup signal.
- fix nisplus error return check and use after free error.
 
14/01/2008 autofs-5.0.3
-----------------------
- include krb5.h in lookup_ldap.h (some openssl doesn't implicitly include it).
- correct initialization of local var in parse_server_string.
- add missing "multi" map support.
- add multi nsswitch lookup.
- change random multiple server selection option name to be consistent
  with existing downstream version 4 naming.
- fix mount point directory creation for bind mounts.
- add quoting for exports gathered by hosts map.
- fix wait time resolution in alarm and state queue handlers.
- fix handling of quoted slash alone.
- fix parse confusion between attribute and attribute value.
- fix version passed to get_supported_ver_and_cost.
- mark map instances stale so they aren't "cleaned" during updates.
- fix large file compile time option.
- don't fail on empty master map.
- add support for the "%" hack for case insensitive attribute schemas.
- fix "nosymlink" option handling and add desription to man page.
- fix don't fail on empty master map.
- if there's no "automount" entry in nsswitch.conf use "files" source.
- add LDAP schema discovery if no schema is configured.
- add random selection as a master map entry option.
- fix couple of edge case parse fails of timeout option.
- check for "*" when looking up wildcard in LDAP.
- fix LDAP schema discovery.
- add SEARCH_BASE configuration option.
- work around segv at exit due to libxml2 tsd usage.
- re-read config on HUP signal.
- add LDAP_URI, LDAP_TIMEOUT and LDAP_NETWORK_TIMEOUT configuration options.
- fix forground logging and add option to man page.
- remove unjustified, nasty comment about krb5 package.