@@ -40,6 +40,7 @@
 - fix incorrect multi-mount mountpoint calcualtion.
 - fix map out of order map re-read on hup signal.
 - fix nisplus error return check and use after free error.
+- fix rootless direct multi-mount expire.
  
 14/01/2008 autofs-5.0.3
 -----------------------
